Fix visual issue with overflow 'scroll'

--- a/css/screen.css
+++ b/css/screen.css
@@ -500,7 +500,7 @@ a:focus {
     grid-template-columns: 1fr 1fr;
 
     align-items: center;
-    overflow: scroll;
+    overflow: auto;
 
     background-image: var(--global-gradient-alpha);
     margin-bottom: var(--global-whitespace-lg);
